--- a/index.html
+++ b/index.html
@@ -461,7 +461,23 @@
         <div class="love-letter">
             <button class="close-btn" onclick="closeLetter()">×</button>
             <h2>My Dearest Valentine,</h2>
-            <p>Just like you found these hidden hearts, you've found the deepest parts of my soul.</p>
+            <p>Just like you found these hidden hearts, you've found the deepest parts of my soulTulad ng paghahanap mo sa mga nakatagong puso na ito, natagpuan mo rin ang pinakamalalim na bahagi ng aking kaluluwa.
+
+Bawat sandali na kasama kita ay isang sorpresang pinapahalagahan ko, isang regalong ayokong tigilan ang pagbubukas.
+
+Salamat sa pagiging aking pakikipagsapalaran, aking ginhawa, at aking mahal.Tulad ng paghahanap mo sa mga nakatagong puso na ito, natagpuan mo rin ang pinakamalalim na bahagi ng aking kaluluwa.
+
+Bawat sandali na kasama kita ay isang sorpresang pinapahalagahan ko, isang regalong ayokong tigilan ang pagbubukas.
+
+Salamat sa pagiging aking pakikipagsapalaran, aking ginhawa, at aking mahal.Tulad ng paghahanap mo sa mga nakatagong puso na ito, natagpuan mo rin ang pinakamalalim na bahagi ng aking kaluluwa.
+
+Bawat sandali na kasama kita ay isang sorpresang pinapahalagahan ko, isang regalong ayokong tigilan ang pagbubukas.
+
+Salamat sa pagiging aking pakikipagsapalaran, aking ginhawa, at aking mahal.Tulad ng paghahanap mo sa mga nakatagong puso na ito, natagpuan mo rin ang pinakamalalim na bahagi ng aking kaluluwa.
+
+Bawat sandali na kasama kita ay isang sorpresang pinapahalagahan ko, isang regalong ayokong tigilan ang pagbubukas.
+
+Salamat sa pagiging aking pakikipagsapalaran, aking ginhawa, at aking mahal..</p>
             <p>Every moment with you is a surprise I cherish, a gift I never want to stop opening.</p>
             <p>Thank you for being my adventure, my comfort, and my love.</p>
             <p>Happy Valentine's Day! ❤️</p>
