--- a/index.html
+++ b/index.html
@@ -461,27 +461,11 @@
         <div class="love-letter">
             <button class="close-btn" onclick="closeLetter()">×</button>
             <h2>My Dearest Valentine,</h2>
-            <p>Just like you found these hidden hearts, you've found the deepest parts of my soulTulad ng paghahanap mo sa mga nakatagong puso na ito, natagpuan mo rin ang pinakamalalim na bahagi ng aking kaluluwa.
-
-Bawat sandali na kasama kita ay isang sorpresang pinapahalagahan ko, isang regalong ayokong tigilan ang pagbubukas.
-
-Salamat sa pagiging aking pakikipagsapalaran, aking ginhawa, at aking mahal.Tulad ng paghahanap mo sa mga nakatagong puso na ito, natagpuan mo rin ang pinakamalalim na bahagi ng aking kaluluwa.
-
-Bawat sandali na kasama kita ay isang sorpresang pinapahalagahan ko, isang regalong ayokong tigilan ang pagbubukas.
-
-Salamat sa pagiging aking pakikipagsapalaran, aking ginhawa, at aking mahal.Tulad ng paghahanap mo sa mga nakatagong puso na ito, natagpuan mo rin ang pinakamalalim na bahagi ng aking kaluluwa.
-
-Bawat sandali na kasama kita ay isang sorpresang pinapahalagahan ko, isang regalong ayokong tigilan ang pagbubukas.
-
-Salamat sa pagiging aking pakikipagsapalaran, aking ginhawa, at aking mahal.Tulad ng paghahanap mo sa mga nakatagong puso na ito, natagpuan mo rin ang pinakamalalim na bahagi ng aking kaluluwa.
-
-Bawat sandali na kasama kita ay isang sorpresang pinapahalagahan ko, isang regalong ayokong tigilan ang pagbubukas.
-
-Salamat sa pagiging aking pakikipagsapalaran, aking ginhawa, at aking mahal..</p>
-            <p>Every moment with you is a surprise I cherish, a gift I never want to stop opening.</p>
-            <p>Thank you for being my adventure, my comfort, and my love.</p>
+            <p>Thank you for everything, mahal. Ang saya na ikaw ang nasa life ko — ang sarap mag-mahal kapag ikaw ang kasama. I love the moments na sabay tayong kumakain, magbo-bowling (sunod go cart na yahu), nanonood ng movies together, lalo na kapag horror (Kahit natatatut aku), naglalaro ng ml kahit inis ikaw haha, at nood mami oni haha. Those simple moments with you are my favorite. I’ll always love you, araw-araw kitang pipiliin at iibigin. Kahit hindi man tayo magkasama palagi, ikaw pa rin ang laman ng puso at isip ko.</p>
+            <p>Kahit may mga times na hindi tayo nagkakaintindihan, mahal pa rin kita. Uulit-ulitin kong sasabihin sa’yo na mahal na mahal kita hehe.</p>
+            <p>This Valentine’s Day, gusto kong gawing special ang day mo. I just want you to feel kung gaano ka ka-lovable. Ang sarap mong mahalin. I love you always, Nitnit <3.</p>
             <p>Happy Valentine's Day! ❤️</p>
-            <p style="text-align: right;">- Yours forever</p>
+            <p style="text-align: right;">- Milkypogi :)</p>
         </div>
     </div>
 
